UPDATE: Created Signup not Signin Form

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Welcome! Please Sign-up Here</h1>
+<h1>Welcome! Please Sign-up Here and Register With the Website</h1>
 <%= form_for @user do |f| %>
     <%= f.label :first_name %>
     <%= f.text_field :first_name %><br>
