Updated CSS styling on error fields

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,5 +14,7 @@
  *= require_self
  */
 .field_with_errors {
-    background-color: aqua;
+    background-color: red;
+    padding: 2px;
+    display: table;
 }
