--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,3 +18,12 @@
     padding: 2px;
     display: inline;
 }
+
+h3#topbar {
+    background-color: sandybrown;
+    margin-top: -1%;
+    margin-left: -1%;
+    margin-right: -1%;
+    padding-top: 0.5%;
+    padding-left: 1%;
+}
