--- a/app/views/coffees/index.html.erb
+++ b/app/views/coffees/index.html.erb
@@ -1,7 +1,7 @@
-<h1>Below are all the coffees available so far!<h1>
-<p>If you find your coffee is missing, please feel free to add a submission</p>
+<div><h1>Below are all the coffees available so far!<h1></div>
+<p>Don't see a specific coffee? Feel free to submit a new one <%= link_to "here", new_coffee_path %></p>
 <ol>
 <% @coffees.each do |coffee| %>
-    <li><%= coffee.drink_name %></li>
+    <li><%= link_to coffee.drink_name, coffee_path(coffee) %></li>
 <% end %>
 </ol>
