--- a/app/views/coffees/new.html.erb
+++ b/app/views/coffees/new.html.erb
@@ -6,6 +6,8 @@
     <%= f.label :description %>
     <%= f.text_area :description %><br><br>
     <%= f.label :store_name %>
-    <%= f.text_field :store_id %><br><br>
+    <%= f.collection_select :store_id, Store.all, :id, :name %><br><br>
+    <%= f.text_field :store_id %>
+    <br><br>
     <%= f.submit %>
 <% end %>
