--- a/app/views/coffees/new.html.erb
+++ b/app/views/coffees/new.html.erb
@@ -5,11 +5,9 @@
     <%= f.text_field :drink_name %><br><br>
     <%= f.label :description %>
     <%= f.text_area :description %><br><br>
-
-    <br><br>
     <label>Store Name: </label>
     <%= f.collection_select :store_id, Store.all, :id, :name %><br><br>
-
+    <p><strong>Cannot find the store? You can also add it below: </strong></p>
     <%= f.fields_for :store, Store.new() do |store_field| %>
         <%= store_field.label :store_name %>
         <%= store_field.text_field :name %>
