--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,7 +20,7 @@
 }
 
 h3#topbar {
-    background-color: sandybrown;
+    background-color:#DFA356;
     margin-top: -1%;
     margin-left: -1%;
     margin-right: -1%;
@@ -28,6 +28,15 @@ h3#topbar {
     padding-left: 1%;
 }
 
+
 body#welcome_b {
     background-color: #DFA356;
+}
+
+div#center {
+    text-align: center;
+}
+
+a:visited, a:link, a:hover, a:active {    
+    color: black
 }
