Added extra links

--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,1 +1,6 @@
+<div id="center">
 <h1 id='welcome'>Welcome!</h1>
+<%= link_to "Explore Coffee", coffees_path %><br>
+<%= link_to "Login", '/signin' %> | 
+<%= link_to "Sign-up", '/signup' %>
+</div>
