Added link to store on show page

--- a/app/views/coffees/show.html.erb
+++ b/app/views/coffees/show.html.erb
@@ -1,5 +1,6 @@
 <h1><%= @coffee.drink_name %></h1>
 <p><%= @coffee.description %></p>
+<h3>Store: <%= link_to @coffee.store.name, store_path(@coffee.store) %></h3>
 <h3>Average Rating: <%= avg_rating %>/5</h3>
 <div>
     <h3>Reviews: </h3>
