--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -1,2 +1,14 @@
 <h1><%= @store.name %></h1>
 <p>This store has the following locations: </h1>
+<%= form_for @location do |f| %>
+    <%= f.hidden_field :store_id, :value => @store.id %>
+    <%= f.label :street %>
+    <%= f.text_field :street %><br>
+    <%= f.label :city %>
+    <%= f.text_field :city %><br>
+    <%= f.label :state %>
+    <%= f.text_field :state %><br>
+    <%= f.label :zip_code %>
+    <%= f.text_field :zip_code %><br>
+    <%= f.submit %>
+<% end %>
