--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 
     <%= stylesheet_link_tag 'application', media: 'all' %>
   </head>
-  <div><h3 id="topbar"><%= link_to "Home", '/'%> | <%= link_to "Coffee", "/coffees" %> | <%= top_bar %> | <%= my_profile %></h3></div>
+  <div><h3 id="topbar"><%= link_to "Home", '/'%> | <%= link_to "Coffee", "/coffees" %> | <%= link_to "Stores", "/stores" %> | <%= top_bar %> | <%= my_profile %></h3></div>
   <body>
     <%= yield %>
   </body>
