Added flash notice

--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -1,3 +1,8 @@
+<% if flash[:notice] %>
+    <%= flash[:notice] %>
+<% end %>
+<% flash.clear %>
+
 <h1>Coffee Stores:</h1>
 <ol>
 <% @stores.each do |store| %>
