--- a/app/views/coffees/show.html.erb
+++ b/app/views/coffees/show.html.erb
@@ -19,7 +19,7 @@
     <%= f.hidden_field :user_id, :value => current_user.id %>
     <%= f.hidden_field :coffee_id, :value => @coffee.id %>
     <%= f.label :rating %>
-    <%= f.number_field :rating, max: 5 %><br>
+    <%= f.number_field :rating, min: 0,max: 5 %><br>
     <%= f.label :content %>
     <%= f.text_area :content %><br>
     <%= f.submit %>
