--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,5 @@
 <h1>Welcome! Please Sign-up Here and Register With the Website</h1>
+<div id="sign-up" >
 <%= form_for @user do |f| %>
     <% if @user.errors.any? %>
     <div id="error_explanation">
@@ -28,4 +29,4 @@
 
     <%= f.submit %>
 <% end %>
-    
+  </div>
