--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Locations</h1>
+<h1><%= store_name %></h1>
 <ul>
 <% @locations.each do |location| %>
     <li>
@@ -9,3 +9,19 @@
     </li><br>
 <% end %>
 </ul>
+
+<h3>Missing Location? Please add it below:</h3>
+<div id="c_location">
+<%= form_for @location do |f| %>
+    <%= f.hidden_field :store_id, :value => @store.id %>
+    <%= f.label :street %>
+    <%= f.text_field :street %><br>
+    <%= f.label :city %>
+    <%= f.text_field :city %><br>
+    <%= f.label :state %>
+    <%= f.text_field :state %><br>
+    <%= f.label :zip_code %>
+    <%= f.text_field :zip_code %><br><br>
+    <%= f.submit %>
+<% end %>
+</div>
