--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -1,4 +1,4 @@
 <h1><%= @store.name %></h1>
 <h3>Add a coffee to this store <%= link_to "here", new_store_coffee_path(@store) %></h3>
-<p>This store has the following locations: </h1>
+<p>This store has <%= link_to "#{num_locations} locations", store_locations_path(@store) %> </h1>
 <ul>
