--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -11,19 +11,5 @@
 </ul>
 
 <% if params[:store_id] %>
-<h3>Missing Location? Please add it below:</h3>
-<div id="c_location">
-<%= form_for @location do |f| %>
-    <%= f.hidden_field :store_id, :value => params[:store_id] %>
-    <%= f.label :street %>
-    <%= f.text_field :street %><br>
-    <%= f.label :city %>
-    <%= f.text_field :city %><br>
-    <%= f.label :state %>
-    <%= f.text_field :state %><br>
-    <%= f.label :zip_code %>
-    <%= f.text_field :zip_code %><br><br>
-    <%= f.submit %>
-<% end %>
-</div>
+<h3>Missing Location? You can add it <%= link_to "here", new_store_location_path(@store) %></h3>
 <% end %>
