--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,7 +1,8 @@
+<h1>Writing a review for <%= @review.coffee.drink_name %></h1>
 <%= form_for @review do |f| %>
     <% if @review.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@review.errors.count, "error") %> prohibited this user from being saved:</h2>
+      <h2><%= pluralize(@review.errors.count, "error") %> prohibited this review from being saved:</h2>
       <ul>
       <% @review.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
