--- a/app/views/coffees/new.html.erb
+++ b/app/views/coffees/new.html.erb
@@ -1,6 +1,18 @@
 <h1>Add Coffee to the Website</h1>
 <p>If you find that a coffee drink is missing, this is the place to add it and share your favorite drink!</p><br>
 <%= form_for @coffee do |f| %>
+
+    <% if @coffee.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@coffee.errors.count, "error") %> prohibited this coffee from being saved:</h2>
+      <ul>
+      <% @coffee.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </div>
+    <% end %>
+
     <%= f.label :drink_name %>
     <%= f.text_field :drink_name %><br><br>
     <%= f.label :description %>
