--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,3 +1,4 @@
+<h1>Updating review for <%= @review.coffee.drink_name %></h1>
 <%= form_for @review do |f| %>
     <% if @review.errors.any? %>
     <div id="error_explanation">
