--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -1,16 +1,8 @@
 <h1>Adding a location for <%= render_name %></h1>
 
 <%= form_for @location do |f| %>
-    <% if @location.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@location.errors.count, "error") %> prohibited this location from being saved:</h2>
-      <ul>
-      <% @location.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-    <% end %>
+  <%= render partial: "layouts/errors", locals: {model: @location} %>
+
     <div id="c_location">
     <%= f.hidden_field :store_id, :value => params[:store_id] %>
     <%= f.label :street %>
