--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,21 +1,2 @@
 <h1>Writing a review for <%= @review.coffee.drink_name %></h1>
-<%= form_for @review do |f| %>
-    <% if @review.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@review.errors.count, "error") %> prohibited this review from being saved:</h2>
-      <ul>
-      <% @review.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-    <% end %>
-
-    <%= f.hidden_field :user_id, :value => current_user.id %>
-    <%= f.hidden_field :coffee_id, :value => @coffee.id %>
-    <%= f.label :rating %>
-    <%= f.number_field :rating, min: 0,max: 5 %><br>
-    <%= f.label :content %>
-    <%= f.text_area :content %><br>
-    <%= f.submit %>
-<% end %>
+<%= render partial: "reviews/form", locals: {model: @review, coffee: @coffee} %>
