--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,3 @@
 <h1>Welcome, <%= @user.first_name + " " + @user.last_name %></h1>
-<%= button_to "Log out", "/logout" %> 
+<p>You have reviewed the following coffees: </p>
+<%= render partial: "coffees/form", locals: {coffees: @user.coffees} %>
