Updated to account for direct model call in view

--- a/app/views/coffees/new.html.erb
+++ b/app/views/coffees/new.html.erb
@@ -10,9 +10,9 @@
     <%= f.text_area :description %><br><br>
 
     <label>Store Name: </label>
-    <%= f.collection_select :store_id, Store.all, :id, :name %><br><br>
+    <%= f.collection_select :store_id, @stores, :id, :name %><br><br>
     <p><strong>Cannot find the store? You can also add it below: </strong></p>
-    <%= f.fields_for :store, Store.new() do |store_field| %>
+    <%= f.fields_for :store, @store do |store_field| %>
         <%= store_field.label :store_name %>
         <%= store_field.text_field :name %>
     <% end %>
