Created helper for flash notice and DRY'd up the views with it

--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -1,8 +1,4 @@
-<% if flash[:notice] %>
-    <%= flash[:notice] %>
-<% end %>
-<% flash.clear %>
-
+<%= flash_notice %>
 <h1>Coffee Stores:</h1>
 <ol>
 <% @stores.each do |store| %>
