Added Admin checkbox and added to params for user creation

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -18,6 +18,9 @@
     <%= f.label :password_confirmation %>
     <%= f.password_field :password_confirmation %><br>
 
+    <%= f.label :admin %>
+    <%= f.check_box :admin %><br>
+
     <%= f.submit %>
 <% end %>
   </div>
