--- a/app/views/stores/_form.html.erb
+++ b/app/views/stores/_form.html.erb
@@ -1,4 +1,4 @@
-<% form_for store do |f| %>
+<%= form_for store do |f| %>
     <%= f.label :name %>
     <%= f.text_field :name %><br>
     <%= f.submit %>
