--- a/app/views/coffees/edit.html.erb
+++ b/app/views/coffees/edit.html.erb
@@ -1,2 +1,2 @@
 <h1>Update Coffee</h1>
-<%= render partial: "coffees/update", locals: {coffee: @coffee, :stores => @stores, store: @store} %>
+<%= render partial: "coffees/form", locals: {coffee: @coffee, :stores => @stores, store: @store} %>
