--- a/app/views/coffees/new.html.erb
+++ b/app/views/coffees/new.html.erb
@@ -1,3 +1,3 @@
 <h1>Add Coffee to the Website</h1>
 <p>If you find that a coffee drink is missing, this is the place to add it and share your favorite drink!</p><br>
-<%= render partial: "coffees/update", locals: {coffee: @coffee, :stores => @stores, store: @store} %>
+<%= render partial: "coffees/form", locals: {coffee: @coffee, :stores => @stores, store: @store} %>
