--- a/app/views/coffees/highest_rated.html.erb
+++ b/app/views/coffees/highest_rated.html.erb
@@ -1,2 +1,2 @@
 <div><h1>Below are the coffees ordered from highest rated to lowest!<h1></div>
-<%= render partial: "coffees/form", locals: {coffees: @coffees} %>
+<%= render partial: "coffees/list", locals: {coffees: @coffees} %>
