--- a/app/views/coffees/most_recent.html.erb
+++ b/app/views/coffees/most_recent.html.erb
@@ -1,2 +1,2 @@
 <div><h1>Below are the most recently added coffees in order from newest to oldest!<h1></div>
-<%= render partial: "coffees/form", locals: {coffees: @coffees} %>
+<%= render partial: "coffees/list", locals: {coffees: @coffees} %>
