--- a/app/views/coffees/index.html.erb
+++ b/app/views/coffees/index.html.erb
@@ -1,5 +1,5 @@
 <%= flash_notice %>
-<div><h1>Below are all the coffees available so far!<h1></div>
+<div><h1><%= coffee_index_wording %></h1></div>
 <p>Don't see a specific coffee? Feel free to submit a new one <%= link_to "here", new_coffee_path %></p>
 <%= link_to "Most Recent", "/coffees/most_recent" %> | 
 <%= link_to "Highest Rated", "/coffees/highest_rated" %> 
